--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcom to Kokoa Talk</title>
+    <title>Welcome to Kokoa Clone</title>
 </head>
 <body>
-    <div id = "status-bar">
+    <div class = "status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
-            <!-- TO DO :::: Wifi ICON -->
+            <i class="fa-solid fa-wifi"></i>
+
         </div>
         <div class="status-bar__column">
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
             <span>110%</span>
-            <!-- To Do :::: Battery ICON-->
-            <!-- Lightning ICON-->
+            <i class="fa-solid fa-battery-full"></i>
+            <i class="fa-solid fa-bolt"></i>
         </div>
     </div>
+
+    <header class = " welcome-header">
+        <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+        <p class="welcome-header__text">If you have a Kokoa Accout, log in with your email or phone number.</p>
+    </header>
+
+    <form id="login-form">
+        <input type="text" placeholder="Email or phone number">
+        <input type="password" placeholder="Password">
+        <input type="submit" value="Log In">
+        <input type="submit" value="Sign Up">
+        <a href="#">Find Kokoa Account or Password</a>
+    </form>
+
+    <script src="https://kit.fontawesome.com/110b524fed.js" crossorigin="anonymous"></script>
 </body>
 </html>
