--- a/chats.html
+++ b/chats.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends - Kokoa Clone</title>
+    <title>Chats - Kokoa Clone</title>
 </head>
 
 <body>
@@ -27,70 +27,51 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
             <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+            <span><i class="fa-solid fa-comment-dots fa-lg"></i></span>
             <span><i class="fa-solid fa-music fa-lg"></i></span>
             <span><i class="fa-solid fa-gear fa-lg"></i></span>
         </div>
     </header>
 
-    <a id="friends-display-link">
-        <i class="fa-solid fa-circle-info"></i>Friends's Names Display
-        <i class="fa-solid fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="friends-screen">
+    <main class="main-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img src="screenshot/img.jpg" class="user-component__avatar user-component__avatar--xl">
+                <img src="screenshot/img.jpg" class="user-component__avatar user-component__avatar">
                 <div class="user-component__text">
                     <h4 class="user-component__title">Nicolas</h4>
-                    <!--<h6 class="user-component__subtitle">this text whatever</h6> -->
-                </div>
-            </div>
-            <div class="user-component__column"></div>
-        </div>
-    
-    <div class="friends-screen__channel">
-        <div class="friends-screen_channel-header">
-            <span>Channel</span>
-            <i class="fa-solid fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="screenshot/img.jpg" class="user-component__avatar user-component__avatar--sm">
-                <div class="user-component__text">
-                    <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+                    <h6 class="user-component__subtitle">Please check My Kokoa Accout Info</h6>
                 </div>
             </div>
             <div class="user-component__column">
-                <div>
-                    <span>2</span>
-                    <i class="fa-solid fa-chevron-right fa-xs"></i>
-                </div>
+                <span class="user-component__time">21:22</span>
+                <div class="badge">1</div>
             </div>
         </div>
-    </div>
+
     </main>
 
 
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"></i></a>
+            </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav_notification badge">1</span>
-                    <i class="fa-regular fa-comment fa-2x"></i>
+                    <i class="fa-solid fa-comment fa-2x"></i>
                     </i>
-                 </a>
+                </a>
             </li>
-            <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+            </li>
             <li class="nav__btn">
                 <a class="nav__link" href="more.html">
                     <span class="nav_alarm"></span>
-                    <i class="fa-solid fa-ellipsis fa-2x">     
+                    <i class="fa-solid fa-ellipsis fa-2x">
                     </i>
                 </a>
             </li>
