--- a/find.html
+++ b/find.html
@@ -57,6 +57,32 @@
             <h6 class="recommanded-friends__title">Recommended Friends</h6>
             <span>You have no recommended friends.</span>
         </div>
+        <div class="open-chat">
+            <div class="open-chat__header">
+                <h4>Open Chat</h4>
+                <span>
+                    Go to Openchat Home<i class="fa-solid fa-chevron-right fa-xs"></i>
+                </span>  
+            </div>
+            <div class="open-post">
+                <div class="open-post__column">
+                    <h5 class="open-post__title">#BTS</h5>
+                    <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                    <div class="open-post__members">
+                        <img src="http://127.0.0.1:5500/screenshot/img.jpg">
+                        <span class="open-post__member-count">802 members</span>
+                        <div class="divider"></div>
+                        <span class="open-post__member-status">Active</span>
+                    </div>
+                </div>
+                <div class="open-post__column">
+                    <div class="open-post__photo">
+                        <img src="http://127.0.0.1:5500/screenshot/img.jpg">
+                        <div class="open-post__heart-count"><i class="fa-solid fa-heart fa-xs"></i><span>326</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
 
